--- a/main.css
+++ b/main.css
@@ -1,12 +1,19 @@
 body {
     font-family: Helvetica, Verdana, sans-serif;
     margin: 20 20 20 20;
+    width: 960px;
 }
-header.quizTitle {
+h1 {
     font-size: 36px;
     margin-bottom: 18px;
 }
-#questionText {
+header h1 {
+    float: left;
+}
+div#signIn {
+    float: right;
+}
+h2 {
     font-size: 24px;
     margin-bottom: 12px;
 }
@@ -16,7 +23,8 @@ header.quizTitle {
 input[type=submit] {
     margin-top: 20px;
 }
-.question {
+div.question {
+    display: none;
+    clear: both;
     padding-left: 50px;
-    display: block;
 }
