--- a/main.css
+++ b/main.css
@@ -1,30 +1,3 @@
-body {
-    font-family: Helvetica, Verdana, sans-serif;
-    margin: 20 20 20 20;
-    width: 960px;
-}
-h1 {
-    font-size: 36px;
-    margin-bottom: 18px;
-}
-header h1 {
-    float: left;
-}
-div#signIn {
-    float: right;
-}
-h2 {
-    font-size: 24px;
-    margin-bottom: 12px;
-}
-#answerList {
-    list-style-type: none;
-}
-input[type=submit] {
-    margin-top: 20px;
-}
-div.question {
-    display: none;
-    clear: both;
-    padding-left: 50px;
+.currUsr {
+    font-weight: bold;
 }
